upgrade the links for pdfs

--- a/_posts/math/2025-03-09-CIS.md
+++ b/_posts/math/2025-03-09-CIS.md
@@ -14,4 +14,4 @@ tags:
 ---
 
 记录一下 CIS 课程，虽然感觉第一节课挺水的（2025.3.9）
-[Lec 1](https://pdflink.to/925a4315/)
+[Lec 1](https://drive.google.com/file/d/1pxkZcCy9oX7frnkkX3DinRajn5CcNumi/view?usp=sharing)
