更新py的格式

--- a/_posts/notes/2025-03-15-py.md
+++ b/_posts/notes/2025-03-15-py.md
@@ -1,3 +1,15 @@
+---
+title: "Python"
+layout:       post
+author:       "Zyeil"
+header-style: text
+catalog:      true
+tags:
+    - python
+    - Kaggle
+    - undergraduate
+---
+
 # Python
 
 ## Basic
