--- a/_posts/words/2025-03-10-casual.md
+++ b/_posts/words/2025-03-10-casual.md
@@ -60,3 +60,9 @@ page-mathjax: true
 国际数学日活动顺利举办！
 
 与此同时一些观察让我产生了一些体会，具体见[不知道是个人还是群体性的欲望表达困境](https://zyeil.github.io/2025/03/14/dilemma/)
+
+3.16
+
+今天练了下琴，和学长聊了聊出国交换的事。最近想看看数论，结果打开书全是高代😭
+
+今天管理仓库的时候搞乱了，整了半天才弄好。感觉还是得抽时间系统地学一学 git，要不然就真的是乱搞，一旦有地方出了一点小问题自己根本搞不明白。而且不知道为什么我在 git bush 里面不能 CV 工程）
