--- a/_posts/words/2025-03-10-casual.md
+++ b/_posts/words/2025-03-10-casual.md
@@ -65,4 +65,6 @@ page-mathjax: true
 
 今天练了下琴，和学长聊了聊出国交换的事。最近想看看数论，结果打开书全是高代😭
 
-今天管理仓库的时候搞乱了，整了半天才弄好。感觉还是得抽时间系统地学一学 git，要不然就真的是乱搞，一旦有地方出了一点小问题自己根本搞不明白。而且不知道为什么我在 git bush 里面不能 CV 工程）
+今天管理仓库的时候搞乱了，整了半天才弄好。感觉还是得抽时间系统地学一学 git，要不然就真的是乱搞，一旦有地方出了一点小问题自己根本搞不明白。而且不知道为什么我在 git bash 里面不能 CV 工程）
+
+用到现在越发觉得很多程序就是一坨屎山（当然也可能是我不会用）
